Progress History Update (JSON)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
-<head>
-</head>
-<body>
-</body>
+	<head>
+		<script src="javascript/jquery.js"> </script>
+        <script src="javascript/globs_g.js"> </script>
+        <script src="javascript/jqinit.js"> </script>
+	</head>	
+	<body>
+		<div id="target">
+        </div>
+	</body>
 </html>
