--- a/index.html
+++ b/index.html
@@ -1,47 +1,38 @@
 
 <html>
    <head>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">		
         <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	    <script src="javascript/jquery.js"></script>
+		<script src="javascript/jquery.validate.min.js"></script>
         <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/jqinit.js"></script>
-		<script src="javascript/globs_g.js"></script>
+		<script src="javascript/globs_silver.js"></script>
    </head>
    <body>
-       <table>
-			   <thead>
-			     <tr>
-				    <th><p>&nbsp;</p>&nbsp;Login</th>
-			     </tr>
-			   </thead>
-			   <tbody>
-			     <tr>
-					<td>&nbsp;<input type="text" id="username"> </td>
-			     </tr>
-				 <tr>
-					<td><br>&nbsp;<input type="password" id="password"> </td>
-				 </tr>
-			   </tbody>
-		</table>
-	   <p> </p>
-	   &nbsp;
-	   <button    
-	            class="btn btn-success btn-mini"
-	            onclick="addUser();">
-				Register
-	   </button>
-	   <table>
-			   <thead>
-			     <tr>
-				    <th><p>&nbsp;</p>&nbsp;Answer</th>
-			     </tr>
-			   </thead>
-			   <tbody>
-			     <tr>
-					<td><p></p><p id = "target"> </p> </td>
-			     </tr>
-			   </tbody>
-	   </table>  
+		<div class="container">
+			<!--<form class="form-signin" method="post" action="addUser();" id="form-signin">-->
+			<form class="form-signin" id="form-signin" method="post" action="javascript:addUser();" method="post">
+				 <h2 class="form-signin-heading">Please sign in</h2>
+
+				<div class="control-group">
+					<label class="control-label" for="login">Login:</label>
+					<div class="controls">
+						<input size="50" name="login" id="login" value="" type="text" class="form-control" placeholder="Username">
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label" for="password">Password:</label>
+					<div class="controls">
+						<input size="50" name="password" id="password" value="" type="password" class="form-control" placeholder="Password">
+					</div>
+				</div>
+				
+				<button name="submit" id="submit" value="" type="submit" class="btn btn-large btn-primary btn-block" >Register</button>
+			</form>
+		</div>
+		
+       
    </body>
 </html>
