--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
    </head>
    <body>
 		<div class="container">
+			 <h2 align="center" class="form-signin-heading">Hygeia Registration Form</h2>	
 			<!--<form class="form-signin" method="post" action="addUser();" id="form-signin">-->
 			<form class="form-signin" id="form-signin" method="post" action="javascript:addUser();" method="post">
-				 <h2 class="form-signin-heading">Please sign in</h2>
+				
 
 				<div class="control-group">
-					<label class="control-label" for="login">Login:</label>
+					<label class="control-label" for="login">Username:</label>
 					<div class="controls">
 						<input size="50" name="login" id="login" value="" type="text" class="form-control" placeholder="Username">
 					</div>
