--- a/fitnessplan.html
+++ b/fitnessplan.html
@@ -1,11 +1,13 @@
 <html>
    <head>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">		
         <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-		<script src="javascript/jquery.js"></script>
+	    <script src="javascript/jquery.js"></script>
+		<script src="javascript/jquery.validate.min.js"></script>
         <script src="javascript/bootstrap.min.js"></script>
-		<script src="javascript/globs_j.js"></script>
         <script src="javascript/jqinit.js"></script>
+		<script src="javascript/globs.js"></script>
 		<title>Get Fitness Plan</title>
    </head>
    <body>
