--- a/progressrecord.html
+++ b/progressrecord.html
@@ -1,13 +1,13 @@
-
 <html>
    <head>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">		
         <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	    <script src="javascript/jquery.js"></script>
+		<script src="javascript/jquery.validate.min.js"></script>
         <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/jqinit.js"></script>
-		<script src="javascript/globs_g.js"></script>
-		<title>Progress Record</title>
+		<script src="javascript/globs.js"></script>
    </head>
    <body>
 	   <h1>Your Record</h1>
@@ -26,7 +26,7 @@
 					<td> <input type="float" id="height" placeholder="Height"> </td>
 					<td> &nbsp;&nbsp; <input type="float" id="weight" placeholder="Weight">  </td>
 					<td> &nbsp;&nbsp; <input type="int" id="age" placeholder="Age"> </td>
-					<td> &nbsp;&nbsp; <button class="btn btn-success btn-mini" onclick="addprogressrecord(3);">
+					<td> &nbsp;&nbsp; <button class="btn btn-success btn-mini" onclick="addprogressrecord(1);">
 				Update
 	   </button> </td>
 			     </tr>
