Improved fetching plans
all combinations are now working

--- a/fitnessplan.html
+++ b/fitnessplan.html
@@ -29,7 +29,7 @@
 					</select> </td>
 					<td> <select class="ageBracket" name="ageBracket" id="ageBracket">
 							<option value="teen" selected="selected">Teen</option>
-							<option value="youngAdult">Young Adult</option>
+							<option value="young_adult">Young Adult</option>
 							<option value="adult">Adult</option>
 					</select> </td>
 					<td> <select class="healthStatus" name="healthStatus" id="healthStatus">
