added new function

--- a/exerciseplan.html
+++ b/exerciseplan.html
@@ -8,10 +8,10 @@
         <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/jqinit.js"></script>
 		<script src="javascript/globs.js"></script>
-		<title>Get Fitness Plan</title>
+		<title>Get Exercise Plan</title>
    </head>
    <body>
-	   <h1>Get Fitness Plan</h1>
+	   <h1>Get Exercise Plan</h1>
        <table>
 			   <thead>
 			     <tr>
@@ -42,7 +42,7 @@
 	   <div id="target">
        </div>
 	   <button  
-	            id="loadfitnessplan"  
+	            id="loadexerciseplan"  
 	            class="btn btn-success btn-mini">
 				Load
 	   </button>
