--- a/progressrecord2.html
+++ b/progressrecord2.html
@@ -9,9 +9,9 @@
 <div id="menu" style="background-color:#FFD700;height:400px;width:200px;float:left;">
 <a href="home.html">Home</a><br>
 <a href="pinfo.html">Personal Account<a><br>
-<a href="fitnessplan.html">Fitness Plan</a><br>
+<a href="fitnessplan2.html">Fitness Plan</a><br>
 <a href="personalfitnessplan.html">Personal Fitness Plan</a><br>
-<a href="progressrecord.html">Progress Record</a></div>
+<a href="progressrecord2.html">Progress Record</a></div>
 
 <div id="content" style="background-color:#EEEEEE;height:400px;width:800px;float:left;">
 
