--- a/fitnessplan2.html
+++ b/fitnessplan2.html
@@ -1,4 +1,23 @@
 <html>
+<body>
+
+<div id="container" style="width:1000px">
+
+<div id="header" style="background-color:#FFA500;">
+<h1 style="margin-bottom:0;"><center>HYGEIA</center></h1></div>
+
+<div id="menu" style="background-color:#FFD700;height:400px;width:200px;float:left;">
+<a href="home.html">Home</a><br>
+<a href="pinfo.html">Personal Account<a><br>
+<a href="fitnessplan2.html">Fitness Plan</a><br>
+<a href="personalfitnessplan.html">Personal Fitness Plan</a><br>
+<a href="progressrecord2.html">Progress Record</a></div>
+
+<div id="content" style="background-color:#EEEEEE;height:400px;width:800px;float:left;">
+
+
+
+<html>
    <head>
 		<link href="css/bootstrap.css" rel="stylesheet">
         <link href="css/bootstrap.min.css" rel="stylesheet">		
@@ -8,7 +27,6 @@
         <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/jqinit.js"></script>
 		<script src="javascript/globs.js"></script>
-		<title>Get Fitness Plan</title>
    </head>
    <body>
 	   <h1>Get Fitness Plan</h1>
@@ -40,12 +58,30 @@
 			     </tr>
 			   </tbody>
 		</table>
-	   <div id="target">
-       </div>
-	   <button    
-	            class="btn btn-success btn-mini"
-	            onclick="fetchfitnessplan_bykey();">
-				Load..
-	   </button>
+	   <p> </p>
+	   &nbsp;
+	   
+	   <table>
+			   <thead>
+			     <tr>
+				    <th></th>
+			     </tr>
+			   </thead>
+			   <tbody>
+			     <tr>
+					<td><p></p><p id = "target"> </p> </td>
+			     </tr>
+			   </tbody>
+	   </table>  
    </body>
+</html>
+
+
+
+<div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
+Copyright 2014 &copy; IHopeYoureHappy</div>
+
+</div>
+ 
+</body>
 </html>
