Registration Form 75% Done / GUI 50% Okay

--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
    <body>
 	   
 		<div class="container">
-		<form class="form-signin" id="form-signin" method="post" action="javascript:addUser();" method="post">	
+		<form class="form-signin" id="form-signin" method="post" action="javascript:adduser();" method="post">	
 		<!-- make use of jqinit here (replace "javascript:addUser()") )-->
 			<div class="control-group">
 				<label class="control-label" for="login">Username:</label>
