Input Field Required and Input Rules and Specifications Applied

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="css/bootstrap-custom.css" rel="stylesheet">
 	<script src="javascript/jquery.js"></script>
 	<script src="javascript/jquery.validate.min.js"></script>
-    <script src="javascript/bootstrap.js"></script>
+	<script src="javascript/bootstrap.js"></script>
 	<script src="javascript/globs.js"></script>
 	<script src="javascript/jqinit.js"></script>
   </head>
@@ -37,9 +37,9 @@
 				<div class="tab-pane active" id="UserAccount"> <br> <br>
 					<form class="center form" id="form-signup" method="post" action="javascript:adduser();" method="post">	
 						<div class="control-group">
-							<label class="control-label" for="login">Username:</label>
+							<label class="control-label" for="username">Username:</label>
 							<div class="controls">
-								<input size="50" name="login" id="login" value="" type="text" class="form-control" placeholder="Username">
+								<input size="50" name="username" id="username" value="" type="text" class="form-control" placeholder="Username">
 							</div> <br>
 							<label class="control-label" for="email">Email:</label>
 							<div class="controls">
@@ -232,7 +232,8 @@
 							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 						  </div>
 						</div>
-					</div>				
+					</div>	
+					<button name="submit" id="submit" value="" type="submit" class="btn btn-primary btn-block" href="#">Proceed</button> 
 				</div>
 			</div>
 		</div>
