--- a/register.html
+++ b/register.html
@@ -1,12 +1,11 @@
+
 <html>
    <head>
    <title>Register</title>
-		<link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap.min.css" rel="stylesheet">		
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+		<link href="css/bootstrap-custom.css" rel="stylesheet">
 	    <script src="javascript/jquery.js"></script>
 		<script src="javascript/jquery.validate.min.js"></script>
-        <script src="javascript/bootstrap.min.js"></script>
+        <script src="javascript/bootstrap.js"></script>
 		<script src="javascript/globs.js"></script>
         <script src="javascript/jqinit.js"></script>
    </head>
