Registration Stats Output Fixed and Login Collapse Debugged

--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
 		<!-- TBC: 
 		1.) Header must disappear/stop being fixed after scrolling to the base of the Carousel, 
 		2.) Icon and "Hygeia" must BOTH highlight upon click,
-		3.) Dropdown menu must be aligned to navbar header and improve color matches,
-		4.) Search feature available (TS) -->
+		3.) Search feature available (TS) -->
 		<div class="navbar navbar-inverse navbar-fixed-top" id="Header" role="navigation">
 	      <div class="container">
 	        <div class="navbar-header">
@@ -324,7 +323,8 @@
 							  	<div id="LogInCollapse" class="collapse">
 								    <input id="loginuser" type="text" class="form-control" placeholder="Username">
 								    <input id="loginpass" type="password" class="form-control" placeholder="Password">
-								    <p id="LogInOutput"> <br> </p>
+								    <label class="checkbox"> <input id="rememberme" type="checkbox" value="true"> Remember me </label>
+								    <p id="LogInOutput"> </p>
 							    </div>
 							    <button type="submit" onclick="logincollapse();" class="btn btn-primary btn-lg">Log In</button>
 							  </form>
