--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
 								  	 <p id="target"> </p>
 									 <div class="row">
 											<div class="col-md-4"> 
-												<label class="control-label" for="AgeStats">Age</label>
+												<label class="control-label" for="AgeStats">Age Bracket</label>
 												<div class="alert alert-danger" role="alert"> <p id="AgeStats"> Hello </p> </div>
 											</div> 
 											<div class="col-md-4">
-												<label class="control-label" for="BMIStat">BMI</label>
-												<div class="alert alert-success" role="alert"> <p id="BMIStats"> Hello </p> </div>
+												<label class="control-label" for="HealthStats">Health Status</label>
+												<div class="alert alert-success" role="alert"> <p id="HealthStats"> Hello </p> </div>
 											</div>
 											<div class="col-md-4"> 
 												<label class="control-label" for="GenderStats">Gender</label>
