Debugged index.html

--- a/index.html
+++ b/index.html
@@ -321,14 +321,15 @@
 					<div class="carousel-caption"> 
 						<h1> Glad you are back. </h1>
 						<p class="lead"> Be right on track always. </p>
-						<div id="LogInCollapse" class="collapse">
-							  <form class="form-signin" role="form">
-							    <input id="loginuser" type="text" class="form-control" placeholder="Username" required="" autofocus="">
-							    <input id="loginpass" type="password" class="form-control" placeholder="Password" required="">
-							    </label>
-							  </form>
-						</div>
-						<button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#LogInCollapse">Log In</button>
+						<form class="form-signin" action="javascript: userlogin();" role="form">
+							  	<div id="LogInCollapse" class="collapse">
+								    <input id="loginuser" type="text" class="form-control" placeholder="Username">
+								    <input id="loginpass" type="password" class="form-control" placeholder="Password">
+								    <label class="checkbox"> <input id="rememberme" type="checkbox" value="true"> Remember me </label>
+								    <p id="LogInOutput"> </p>
+							    </div>
+							  <button type="submit" onclick="logincollapse();" class="btn btn-primary btn-lg">Log In</button>
+						</form>
 					</div>
 				</div>
 				<div class="item" id="CarouselThree">
