--- a/index.html
+++ b/index.html
@@ -172,24 +172,20 @@
 											</div>
 										</div> <br>
 										<label class="control-label" for="gender">Gender:</label>
-										<fieldset>
-										<div class="controls"> 
-											<div class="row">
-											  <div class="col-md-2"> 
-												<div class="radio"> 
-												  <label> <input type="radio" name="gender" id="gender" value="male">Male</label> 
-												</div>
-											  </div> 
-											  <div class="col-md-2"> 
-												<div class="radio"> 
-												  <label> <input type="radio" name="gender" id="gender" value="female">Female</label> 
-												</div> 
-											  </div>
-											</div> 
-										</div> <br> <br>
-										</fieldset>
-										<button name="submit" id="save" value="" type="submit" class="btn btn-primary btn-block">Save</button>
-									</div> 
+								        <fieldset>
+								        <div class="controls" id="gender"> 
+								            <div class="row" id="genderrow">
+								              <div class="col-md-3"> 
+								                  <label class="radio-inline"> <input type="radio" name="gender" value="male">&nbsp;&nbsp;Male</label> 
+								              </div> 
+								              <div class="col-md-3"> 
+								                  <label class="radio-inline"> <input type="radio" name="gender" value="female">&nbsp;&nbsp;Female</label> 
+								              </div>
+								            </div> 
+								        </div> <br>
+								        </fieldset>
+								        <button name="submit" id="save" value="" type="submit" class="btn btn-primary btn-block">Save</button>
+								    </div> 
 								</form> 
 							</div>
 							<!-- Health Stats -->
